# shmup

./: CMakeLists.txt  Makefile  MakefileVisual  README.md  main.cpp  shmup
Rosalila/: Rosalila.cpp
Rosalila/RosalilaApiIntegrator/: RosalilaApiIntegrator.cpp  RosalilaApiIntegrator.h
Rosalila/RosalilaApiIntegrator/Steam/: LeaderboardHandler.cpp  LeaderboardHandler.h  SteamIntegration.cpp  SteamIntegration.h  UGCHandler.cpp  UGCHandler.h
Rosalila/RosalilaGraphics/: Animation.h  Image.h  RosalilaGraphics.h
Rosalila/RosalilaSound/: RosalilaSound.h
Rosalila/RosalilaUtility/: RosalilaUtility.cpp
RosalilaShooter/: STG.cpp  STG.h
RosalilaShooter/Character/: Character.cpp  Enemy.cpp  Player.cpp  Player.h
RosalilaShooter/Menus/: Intro.cpp  StageModsSelect.cpp  StageSelect.cpp
RosalilaShooter/Stage/: Layer.cpp  Layer.h  Stage.cpp
assets/: config.xml
assets/chars/turtle/: bullets.xml  main.xml  patterns.xml
assets/stages/demo/: main.xml
assets/stages/demo/Enemy/: main.xml  patterns.xml
