cmake_minimum_required(VERSION 3.5)
include_directories(include)
set (CMAKE_CXX_STANDARD 11)
link_directories(./)

IF (UNIX AND NOT APPLE)
  file(GLOB_RECURSE SOURCES "Rosalila/*.cpp" "RosalilaShooter/*.cpp" main.cpp)
  add_executable(shmup ${SOURCES})
  target_link_libraries (shmup GL SDL2 SDL2_image SDL2_ttf SDL2_mixer libsteam_api.so)
ENDIF ()

IF (APPLE)
  set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
  find_package(SDL2 REQUIRED)
  find_package(SDL2_image REQUIRED)
  find_package(SDL2_ttf REQUIRED)
  find_package(SDL2_mixer REQUIRED)
  find_package(OpenGL REQUIRED)
  include_directories(${SDL2_INCLUDE_DIR})
  include_directories(${SDL2_IMAGE_INCLUDE_DIR})
  include_directories(${SDL2_TTF_INCLUDE_DIR})
  include_directories(${SDL2_MIXER_INCLUDE_DIR})
  include_directories(${OPENGL_INCLUDE_DIR})
  file(GLOB_RECURSE SOURCES "Rosalila/*.cpp" "RosalilaShooter/*.cpp" main.cpp)
  add_executable(shmup ${SOURCES})
  target_link_libraries (shmup ${OPENGL_LIBRARIES} ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2_TTF_LIBRARY} ${SDL2_MIXER_LIBRARY} libsteam_api.dylib)
ENDIF ()
